2011-04-24 Roman
- !!:FIX:DAQ.JavaLikeCalc: The object RegExp function replace() is fixed from crash.


2011-04-22 Roman
- SYS: Function XMLNodeObj::getStrXML() is implemented for convert to string.
- !!:SYS: To user API of object XMLNodeObj is added functions getElementBy() for search included nodes by attribute value.
- !!:DAQ.JavaLikeCalc: isEVal() function for "null" type is added.
    To user object API of a library function is added call() for dynamic call.
- UI.QTCfg: Unified dialog "InputDlg" is some improved for resize.
- FIX:UI.Vision: Lost selection in attribute inspector at the widget enter to edit by double mouse click.


2011-04-21 Roman
- SYS, Archives, DB, DAQ, Protocols, Security, Transports, DAQ.BlockCalc, Protocol.ModBus, Protocol.OPC_UA, Protocol.UserProtocol, UI.WebUser:
    Error double node creation message is added for create from configurator list element.
- Transport.Out: Help to wait timeout property of free request form is added.
- UI.QTCfg: Navigation tree widget's width limit is removed.
- Transport: Types of the requests form of output transport is exanded for line end variants support: LF, CR, CR/LF.
- !!!!:FIX:Transport, DAQ.AMRDevs, DAQ.DCON, DAQ.ICP_DAS, DAQ.ModBus, DAQ.OPC_UA, Protocol.HTTP, :
    Using function TTransportOut::messIO() for tail requests and zero result is fixed everywhere.
- !:FIX:DAQ.ModBus, Transport.Serial, UI.WebCfg, UI.WebCfgD, UI.WebUser, UI.WebVision:
    Wrong using symbol '\n' for multi program platform UNIX, MAC, DOS/Windows is fixed by replace to "\x0A".
- !!:Protocol.HTTP: HTTP-header parse, for requests, to different line end variants (LF, CR, CR/LF) support is added.
- UI.WebCfgD: Adapted for full screen.
- UI.WebUser: HTTP properties get from script object and place it to answer is added.


2011-04-19 Roman
- !!:SYS: To user API is added functions SYS.fileRead() and SYS.fileWrite() for work with files on filesystem.