@@ -112,7 +112,7 @@ class SyntxHighl : public QSyntaxHighlighter
 
     protected:
 	void highlightBlock(const QString &text);
-	void rule(XMLNode *rl, const QString &text, QTextCharFormat defForm, int off = 0);
+	void rule(XMLNode *irl, const QString &text, int off = 0, char lev = 0);
 
 	XMLNode rules;
 };
