@@ -1,3 +1,10 @@
+2011-04-26 Roman
+- DAQ.JavaLikeCalc: Syntax highlight rules for "JavaScript" is updated.
+- DAQ.ModBus: Syntax highlight rules for attributes of a parameter list.
+- !!:UI.QTCfg, UI.Vision: Syntax highlight engine is full rewrited for made simpler and prevent some hiden bugs.
+    New syntax highlight engine is full support multilevel rules, include blocks, up to four levels.
+
+
 2011-04-24 Roman
 - !!:FIX:DAQ.JavaLikeCalc: The object RegExp function replace() is fixed from crash.
 
